force-app/main/default/objects/AHA_EasyMilestones_Process_Milestone__mdt/AHA_EasyMilestones_Process_Milestone__mdt.object-meta.xml
<CustomObject>
    <label>AHA Easy Milestones Process Milestone</label>
    <pluralLabel>AHA Easy Milestones Process Milestones</pluralLabel>
</CustomObject>