force-app/main/default/objects/AHA_EasyMilestones_Process_Milestone__mdt/fields/Business_Hours_Id_Override__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Id_Override__c</fullName>
    <label>Business Hours Id Override</label>
    <type>Text</type>
    <length>18</length>
</CustomField>