force-app/main/default/objects/AHA_EasyMilestones_Process_Milestone__mdt/fields/Extension_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Extension_Enabled__c</fullName>
    <label>Extension Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>