force-app/main/default/objects/AHA_EasyMilestones_Process_Milestone__mdt/fields/Extension_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Extension_Field_API_Name__c</fullName>
    <label>Extension Field API Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>