force-app/main/default/objects/AHA_EasyMilestones_Process_Milestone__mdt/fields/Manual_Completion_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Manual_Completion_Enabled__c</fullName>
    <label>Manual Completion Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>