force-app/main/default/objects/AHA_EasyMilestones_Process_Milestone__mdt/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>MetadataRelationship</type>
    <relationshipName>Process_Milestone_Process</relationshipName>
    <referenceTo>AHA_EasyMilestones_Process__mdt</referenceTo>
</CustomField>