force-app/main/default/objects/AHA_EasyMilestones_Process_Milestone__mdt/fields/Reset_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Reset_Enabled__c</fullName>
    <label>Reset Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>