force-app/main/default/objects/AHA_EasyMilestones_Process_Milestone__mdt/fields/Time_Trigger_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Trigger_Minutes__c</fullName>
    <label>Time Trigger Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>